--- a/assets/overlays/com.android.documentsui/res/values/colors.xml
+++ b/assets/overlays/com.android.documentsui/res/values/colors.xml
@@ -11,8 +11,8 @@
 	
     <color name="item_doc_grid_background">@color/material_grey_300</color>
     <color name="item_doc_grid_protect_background">#ff141920</color>
-    <color name="item_doc_grid_overlay_activated">#880D2C37</color>
+    <color name="item_doc_grid_overlay_activated">#881a1a1a</color>
     <color name="item_doc_grid_overlay_disabled">#88ffffff</color>
     <color name="item_doc_list_overlay_disabled">#88ffffff</color>
-    <color name="item_doc_list_background_activated">#ff0D2C37</color>
+    <color name="item_doc_list_background_activated">@*common:color/octink_2</color>
 </resources>
